--- a/package.json
+++ b/package.json
@@ -12,10 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.0.23",
-    "react-query": "^3.39.3",
-    "react-query-devtools": "^2.6.3",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
