--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "json-server": "^0.17.3"
+    "json-server": "^0.17.3",
+    "tailwindcss": "^3.3.2"
   }
 }
