--- a/package.json
+++ b/package.json
@@ -30,9 +30,8 @@
   },
   "browserslist": {
     "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
+      "last 1 firefox version",
+      "last 1 chrome version"
     ],
     "development": [
       "last 1 chrome version",
